--- a/react_js/src/App.css
+++ b/react_js/src/App.css
@@ -77,6 +77,14 @@
   animation: spin 1s linear infinite;
 }
 
+.notification {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  left: 1%;
+  z-index: 9999;
+}
+
 @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
